Remove scrollbar visible from repeat group in application view, fix incoherent translations

--- a/media/com_emundus/css/emundus_files.css
+++ b/media/com_emundus/css/emundus_files.css
@@ -688,6 +688,12 @@ div#em-appli-block .active.content fieldset {
 
 .panel-body.Marginpanel-body.em-container-form-body .em-personalDetail{
     overflow:scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.panel-body.Marginpanel-body.em-container-form-body .em-personalDetail::-webkit-scrollbar {
+    display: none;
 }
 
 div#em-appli-block .legend {
